--- a/style.css
+++ b/style.css
@@ -87,7 +87,43 @@ nav ul li a {
 nav ul li a:hover {
     background-color: #555555;
 }
-
+#player {
+    height: 600px;
+    width: 100%;
+    border: 2px solid red;
+    margin: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+  }
+  #wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px auto;
+  }
+  .jwplayer {
+    height: 300px !important;
+  }
+  iframe {
+    width: 100%;
+    height: 500px;
+    border: none;
+    overflow: hidden;
+  }
+  .responsive-gif {
+    display: block;
+    width: 100%;
+  }
+  .responsive-gif img {
+    display: block;
+    width: 100%;
+    height: 250px;
+    max-height: 300px;
+    border-radius: 50px;
+    object-fit: cover;
+  }
 .card {
     width: 300px;
     height: 400px;
