--- a/style.css
+++ b/style.css
@@ -11,47 +11,60 @@ body {
     text-align: center;
     text-transform: uppercase;
 }
+
 iframe {
     width: 100%;
     height: 500px;
     border: none;
     overflow: hidden;
-  }
-  .responsive-gif {
+}
+
+.responsive-gif {
     display: block;
     width: 100%;
-  }
-  .responsive-gif img {
+}
+
+.responsive-gif img {
     display: block;
     width: 100%;
     height: 250px;
     max-height: 300px;
     border-radius: 50px;
     object-fit: cover;
-  }
-  #player {
+}
+
+#player {
     height: 500px;
     width: 100%;
-  }
+}
 
-h1, h2, a {
+h1,
+h2,
+a {
     color: #40A2D8;
 }
+
 .responsive {
     display: block;
     width: 100%;
-    max-height: 400px; /* Set a maximum height if needed */
-    overflow: hidden; /* Ensure any overflow is hidden */
+    max-height: 400px;
+    /* Set a maximum height if needed */
+    overflow: hidden;
+    /* Ensure any overflow is hidden */
     border-radius: 10px;
 }
 
 .responsive img {
     display: block;
     width: 100%;
-    height: 180px; /* Ensure the height adjusts based on the container */
-    object-fit: contain; /* Fit the image in the container maintaining the aspect ratio */
-    border-radius: 40px; /* Rounded corners */
+    height: 180px;
+    /* Ensure the height adjusts based on the container */
+    object-fit: contain;
+    /* Fit the image in the container maintaining the aspect ratio */
+    border-radius: 40px;
+    /* Rounded corners */
 }
+
 .inputBox_container {
     display: flex;
     justify-content: center;
@@ -112,7 +125,7 @@ nav ul li a:hover {
 
 .card {
     width: 300px;
-    height: 300px;
+    height: 400px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     overflow: hidden;
@@ -212,7 +225,8 @@ nav ul li a:hover {
 
 .modal-content p {
     margin-bottom: 20px;
-    color: blue; /* Added to make all paragraphs within the modal blue */
+    color: blue;
+    /* Added to make all paragraphs within the modal blue */
 }
 
 .close-button {
