--- a/style.css
+++ b/style.css
@@ -15,9 +15,9 @@ body {
 iframe {
     width: 100%;
     height: 500px;
-    border: none;
+    border: 4px solid red; /* Changed to solid for visibility */
     overflow: hidden;
-}
+  }
 
 .responsive-gif {
     display: block;
