--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@
 
 /* General Content Styling */
 body {
-    background-color: #31363F;
+    background-color: #272728;
     color: #F0EDCF;
     text-align: center;
     text-transform: capitalize;
